--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ after_success:
   - docker build -t timmolleman/multi-client ./client
   - docker build -t timmolleman/multi-nginx ./nginx
   - docker build -t timmolleman/multi-server ./server
-  - docker-build -t timmolleman/multi-worker ./worker
+  - docker build -t timmolleman/multi-worker ./worker
 
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
