--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       dockerfile: Dockerfile.dev
       context: ./nginx
     ports:
+      # nginx listens on port 80 in Docker image by default. Visiting localhost
+      # 3050 will redirect to container port 80 in container
       - '3050:80'
   api:
     depends_on:
